fix: title chopping down on small screen sizes

--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -4,7 +4,7 @@
   display: grid;
   grid-auto-flow: column;
   justify-content: space-between;
-  align-items: baseline;
+  align-items: center;
 
   background: #ff4f00;
 
